Fix console warning, left-align ob markers

--- a/src/css/ScoreCard.css
+++ b/src/css/ScoreCard.css
@@ -137,6 +137,8 @@
 
 .wrap div.obContainer {
   position: relative;
+  text-align: left;
+  margin-left: 1px;
 }
 
 .obCount {
